<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">美乐蒂猜猜乐</string>
    <string name="start_game">开始游戏</string>
    <string name="exit_game">退出游戏</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="maybe_yes">或许是</string>
    <string name="maybe_no">或许不是</string>
    <string name="dont_know">不知道</string>
    <string name="confirm_yes">对啦！猜中啦~</string>
    <string name="confirm_no">不对哦，再想想…</string>
    <string name="play_again">再玩一次</string>
    <string name="back_to_start">返回首页</string>
    <string name="settings">设置</string>
    <string name="api_key_title">API 密钥设置</string>
    <string name="api_key_hint">请输入硅基流动 API 密钥</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="thinking">美乐蒂正在思考中…</string>
</resources>
